添加k8s cl集群管理功能api
