# server/cmd/datas/menus.go
@@ -15,9 +15,10 @@ import (
 var BaseMenus = []model.SysBaseMenu{
 	{GVA_MODEL: global.GVA_MODEL{ID: 1, CreatedAt: time.Now(), UpdatedAt: time.Now()}, MenuLevel: 0, ParentId: "0", Path: "dashboard", Name: "dashboard", Hidden: false, Component: "view/dashboard/index.vue", Sort: 1, Meta: model.Meta{Title: "首页", Icon: "s-home"}},
 	{GVA_MODEL: global.GVA_MODEL{ID: 2, CreatedAt: time.Now(), UpdatedAt: time.Now()}, MenuLevel: 0, Hidden: false, ParentId: "0", Path: "kubernetes", Name: "kubernetes", Component: "view/kubernetes/index.vue", Sort: 2, Meta: model.Meta{Title: "Kubernetes管理", Icon: "cloudy"}},
-	{GVA_MODEL: global.GVA_MODEL{ID: 15, CreatedAt: time.Now(), UpdatedAt: time.Now()}, MenuLevel: 0, Hidden: false, ParentId: "2", Path: "k8sNamespaces", Name: "k8sNamespaces", Component: "view/kubernetes/namespaces/k8sNamespaces.vue", Sort: 1, Meta: model.Meta{Title: "命名空间管理", Icon: "menu"}},
-	{GVA_MODEL: global.GVA_MODEL{ID: 16, CreatedAt: time.Now(), UpdatedAt: time.Now()}, MenuLevel: 0, Hidden: false, ParentId: "2", Path: "k8sDeployments", Name: "k8sDeployments", Component: "view/kubernetes/deployments/k8sDeployments.vue", Sort: 2, Meta: model.Meta{Title: "应用管理", Icon: "s-grid"}},
-	{GVA_MODEL: global.GVA_MODEL{ID: 17, CreatedAt: time.Now(), UpdatedAt: time.Now()}, MenuLevel: 0, Hidden: false, ParentId: "2", Path: "k8sPods", Name: "k8sPods", Component: "view/kubernetes/pods/index.vue", Sort: 3, Meta: model.Meta{Title: "容器管理", Icon: "s-grid"}},
+	{GVA_MODEL: global.GVA_MODEL{ID: 15, CreatedAt: time.Now(), UpdatedAt: time.Now()}, MenuLevel: 0, Hidden: false, ParentId: "2", Path: "k8sCluster", Name: "k8sCluster", Component: "view/kubernetes/clusters/index.vue", Sort: 1, Meta: model.Meta{Title: "集群管理", Icon: "menu"}},
+	{GVA_MODEL: global.GVA_MODEL{ID: 16, CreatedAt: time.Now(), UpdatedAt: time.Now()}, MenuLevel: 0, Hidden: false, ParentId: "2", Path: "k8sNamespaces", Name: "k8sNamespaces", Component: "view/kubernetes/namespaces/k8sNamespaces.vue", Sort: 2, Meta: model.Meta{Title: "命名空间管理", Icon: "menu"}},
+	{GVA_MODEL: global.GVA_MODEL{ID: 17, CreatedAt: time.Now(), UpdatedAt: time.Now()}, MenuLevel: 0, Hidden: false, ParentId: "2", Path: "k8sDeployments", Name: "k8sDeployments", Component: "view/kubernetes/deployments/k8sDeployments.vue", Sort: 3, Meta: model.Meta{Title: "应用管理", Icon: "s-grid"}},
+	{GVA_MODEL: global.GVA_MODEL{ID: 18, CreatedAt: time.Now(), UpdatedAt: time.Now()}, MenuLevel: 0, Hidden: false, ParentId: "2", Path: "k8sPods", Name: "k8sPods", Component: "view/kubernetes/pods/index.vue", Sort: 4, Meta: model.Meta{Title: "容器管理", Icon: "s-grid"}},
 	{GVA_MODEL: global.GVA_MODEL{ID: 3, CreatedAt: time.Now(), UpdatedAt: time.Now()}, MenuLevel: 0, Hidden: false, ParentId: "0", Path: "admin", Name: "superAdmin", Component: "view/superAdmin/index.vue", Sort: 3, Meta: model.Meta{Title: "超级管理员", Icon: "user-solid"}},
 	{GVA_MODEL: global.GVA_MODEL{ID: 4, CreatedAt: time.Now(), UpdatedAt: time.Now()}, MenuLevel: 0, Hidden: false, ParentId: "3", Path: "authority", Name: "authority", Component: "view/superAdmin/authority/authority.vue", Sort: 1, Meta: model.Meta{Title: "角色管理", Icon: "s-custom"}},
 	{GVA_MODEL: global.GVA_MODEL{ID: 5, CreatedAt: time.Now(), UpdatedAt: time.Now()}, MenuLevel: 0, Hidden: false, ParentId: "3", Path: "menu", Name: "menu", Component: "view/superAdmin/menu/menu.vue", Sort: 2, Meta: model.Meta{Title: "菜单管理", Icon: "s-order", KeepAlive: true}},
