# server/docs/swagger.yaml
@@ -208,6 +208,21 @@ definitions:
       fieldType:
         type: string
     type: object
+  model.K8sCluster:
+    properties:
+      clusterName:
+        type: string
+      clusterVersion:
+        type: number
+      createdAt:
+        type: string
+      id:
+        type: integer
+      kubeConfig:
+        type: string
+      updatedAt:
+        type: string
+    type: object
   model.K8sDeployment:
     properties:
       createdAt:
@@ -436,6 +451,25 @@ definitions:
           type: integer
         type: array
     type: object
+  request.K8sClusterSearch:
+    properties:
+      clusterName:
+        type: string
+      clusterVersion:
+        type: number
+      createdAt:
+        type: string
+      id:
+        type: integer
+      kubeConfig:
+        type: string
+      page:
+        type: integer
+      pageSize:
+        type: integer
+      updatedAt:
+        type: string
+    type: object
   request.K8sDeploymentSearch:
     properties:
       createdAt:
@@ -558,6 +592,144 @@ info:
   title: Swagger Example API
   version: 0.0.1
 paths:
+  /K8sCluster/createK8sCluster:
+    post:
+      consumes:
+      - application/json
+      parameters:
+      - description: 创建K8sCluster
+        in: body
+        name: data
+        required: true
+        schema:
+          $ref: '#/definitions/model.K8sCluster'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: '{"success":true,"data":{},"msg":"获取成功"}'
+          schema:
+            type: string
+      security:
+      - ApiKeyAuth: []
+      summary: 创建K8sCluster
+      tags:
+      - K8sCluster
+  /K8sCluster/deleteK8sCluster:
+    delete:
+      consumes:
+      - application/json
+      parameters:
+      - description: 删除K8sCluster
+        in: body
+        name: data
+        required: true
+        schema:
+          $ref: '#/definitions/model.K8sCluster'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: '{"success":true,"data":{},"msg":"删除成功"}'
+          schema:
+            type: string
+      security:
+      - ApiKeyAuth: []
+      summary: 删除K8sCluster
+      tags:
+      - K8sCluster
+  /K8sCluster/deleteK8sClusterByIds:
+    delete:
+      consumes:
+      - application/json
+      parameters:
+      - description: 批量删除K8sCluster
+        in: body
+        name: data
+        required: true
+        schema:
+          $ref: '#/definitions/request.IdsReq'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: '{"success":true,"data":{},"msg":"批量删除成功"}'
+          schema:
+            type: string
+      security:
+      - ApiKeyAuth: []
+      summary: 批量删除K8sCluster
+      tags:
+      - K8sCluster
+  /K8sCluster/findK8sCluster:
+    get:
+      consumes:
+      - application/json
+      parameters:
+      - description: 用id查询K8sCluster
+        in: body
+        name: data
+        required: true
+        schema:
+          $ref: '#/definitions/model.K8sCluster'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: '{"success":true,"data":{},"msg":"查询成功"}'
+          schema:
+            type: string
+      security:
+      - ApiKeyAuth: []
+      summary: 用id查询K8sCluster
+      tags:
+      - K8sCluster
+  /K8sCluster/getK8sClusterList:
+    get:
+      consumes:
+      - application/json
+      parameters:
+      - description: 分页获取K8sCluster列表
+        in: body
+        name: data
+        required: true
+        schema:
+          $ref: '#/definitions/request.K8sClusterSearch'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: '{"success":true,"data":{},"msg":"获取成功"}'
+          schema:
+            type: string
+      security:
+      - ApiKeyAuth: []
+      summary: 分页获取K8sCluster列表
+      tags:
+      - K8sCluster
+  /K8sCluster/updateK8sCluster:
+    put:
+      consumes:
+      - application/json
+      parameters:
+      - description: 更新K8sCluster
+        in: body
+        name: data
+        required: true
+        schema:
+          $ref: '#/definitions/model.K8sCluster'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: '{"success":true,"data":{},"msg":"更新成功"}'
+          schema:
+            type: string
+      security:
+      - ApiKeyAuth: []
+      summary: 更新K8sCluster
+      tags:
+      - K8sCluster
   /api/createApi:
     post:
       consumes:
