# server/model/request/k8s_clusters.go
@@ -1,0 +1,8 @@
+package request
+
+import "gin-vue-admin/model"
+
+type K8sClusterSearch struct{
+    model.K8sCluster
+    PageInfo
+}
